# envision

./: .coverage  .env.example  .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  config.py  environment.yml  main.py  main_enhanced.py  pyproject.toml  requirements.txt  sitecustomize.py  start_windows.py  test_llm_api.py  test_output.txt  test_rag.py  test_report_sample.md  tree_output.txt
.claude/: settings.local.json
.github/workflows/: ci-cd.yml.disabled
analysis/: __init__.py  gap_analyzer.py  strategy_generator.py  topic_analyzer.py
completion/: __init__.py  data_completion.py  report_generator.py
components/: __init__.py  module1_topics.py  module2_weights.py  module3_gap.py  module4_strategy.py
config/prompt_templates/: analyst_prompt.j2  compliance_prompt.j2  content_prompt.j2  corpus_fix_prompt.j2  extract_prompt.j2  rag_extraction_enhancement_prompt.j2
config/rule_templates/: esg_standards.json  match_rules.json  topic_rules.json
core/: __init__.py  constants.py  data_models.py  esg_engine.py  rag_engine.py
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh  quick_start.bat  quick_start.sh
docs/: AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  DEVELOPMENT.md  DEV_LOG.md  ESG项目全生命周期实施计划.md  FAQ.md  MIGRATION.md  P0-P1-P2需求对齐表.md  learning.md  test_report_sample.md  模型效果验证报告.md  用户操作手册.md  课题研究报告附件.md  部署说明文档.md  项目模型说明文档.md
docs/agent_prompt_schema/: Agent Prompt与Schema约束说明.md  Agent详细Prompt与Schema模板.md  agent_specific_schemas.json
docs/stage_e/: manual_review_sample_template.md  stage_e_runbook.md  verdict_mapping.md
docs/stage_e3/: e3_current_scope_acceptance_result.json  e3_current_scope_effective_artifacts.json  e3_current_scope_manifest.json  e3_expected_outputs.md  e3_final_advisor_invocation_approval.md  e3_final_current_effective_assessment_set.json  e3_final_current_effective_assessment_set_draft.json  e3_llm_invocation_approval.md  e3_preflight_validation.md
docs/stage_e3_5/: e3_5_gri_3_3_execution_notes.md  e3_5_gri_3_3_index_instance_scope.json  e3_5_gri_3_3_topic_instantiation_plan.md  e3_5_gri_3_3_topic_scope.json
docs/stage_e3_cleanup/: e3_traceability_cleanup_acceptance_gate.json  e3_traceability_cleanup_audit.json  e3_traceability_cleanup_execution_notes.md  e3_traceability_cleanup_plan.md
docs/stage_f/: f_human_evaluation_guide.md
extractor/: __init__.py  metric_extractor.py  pdf_extractor.py
fusion/: __init__.py  ahp_fusion.py  rule_engine.py
new_modules/: __init__.py  ahp_calculator.py  esg_data_extractor.py  gap_analyzer.py  news_crawler.py  strategy_generator.py  topic_analyzer.py
scripts/: accept_stage_e3_5_and_final_current_set.py  apply_stage_e3_143_advisor_summary_correction.py  apply_stage_e3_5_3_3_smoke_review_corrections.py  apply_stage_e3_5_3_3_source_text_corrections.py  apply_stage_e3_batch01_smoke_corrections.py  apply_stage_e3_batch05_field_corrections.py  apply_stage_e3_batch05_smoke_corrections.py  build_p0_evidence_layer.py  build_p0_index_target_evidence.py  build_p0_requirement_checklist.py  build_p0_requirement_sampling_manifest.py  build_stage_e3_5_index_3_3_assessments.py  build_stage_e3_5_topic_assessments.py  build_stage_e3_final_current_effective_set.py  build_stage_e3_traceability_cleanup_artifacts.py  check_code_complexity.py  check_code_counter.py  check_docstring_coverage.py  check_init_demo_data.py  check_llm_config.py  check_test_coverage_.py  check_thinking.py  config.py  create_vector_db.py  extract_esg_data.py  import_and_compute_stage_f_human_evaluation.py  import_f_human_review_results.py  import_peer_reports.py  import_standards.py  inspect_p0_gri_locators.py  ollama_utils.py  prepare_stage_e3_unified_final_advisor.py  rag_system.py  regenerate_stage_e3_corrected_advisor.py  run_api.py  run_p0_stage_e1_real_run.py  run_p0_stage_e2_1_regression.py  run_p0_stage_e3_batch.py  run_p0_stage_e_dry_run.py  run_stage_e3_143_unified_final_advisor.py  (+13 more)
scripts/archive_stage_e/: accept_stage_e3_5_and_final_current_set.py  apply_stage_e3_143_advisor_summary_correction.py  apply_stage_e3_5_3_3_smoke_review_corrections.py  apply_stage_e3_5_3_3_source_text_corrections.py  apply_stage_e3_batch01_smoke_corrections.py  apply_stage_e3_batch05_field_corrections.py  apply_stage_e3_batch05_smoke_corrections.py  build_stage_e3_5_index_3_3_assessments.py  build_stage_e3_5_topic_assessments.py  build_stage_e3_final_current_effective_set.py  build_stage_e3_traceability_cleanup_artifacts.py  prepare_stage_e3_unified_final_advisor.py  regenerate_stage_e3_corrected_advisor.py  run_p0_stage_e1_real_run.py  run_p0_stage_e2_1_regression.py  run_p0_stage_e3_batch.py  run_p0_stage_e_dry_run.py  run_stage_e3_143_unified_final_advisor.py  run_stage_e3_5_index_3_3_llm.py
src/: .coverage  __init__.py  config.py  main.py  start_windows.py  test_report_sample.md
tests/: check_gpu.py  conftest.py  test_ahp_fusion.py  test_competitor_feature.py  test_compliance.py  test_comprehensive.py  test_data_models.py  test_edge_cases.py  test_gap_analyzer.py  test_mvp.py  test_p0_requirement_checklist.py  test_p0_requirement_sampling_manifest.py  test_pdf_extractor.py  test_qa.py  test_rag_engine.py  test_security.py  test_stage_e2_1_d_aggregation_scope.py  test_stage_e2_1_d_index_target_evidence.py  test_stage_e2_1_e_field_corrections.py  test_stage_e2_1_evidence_contract.py  test_stage_e2_1_regression_run.py  test_stage_e3_143_final_advisor.py  test_stage_e3_5_and_cleanup_artifacts.py  test_stage_e3_5_index_3_3_runner.py  test_stage_e3_batch_outputs.py  test_stage_e4_import_f_review_results.py  test_stage_e4_p0_review_api.py  test_stage_e4_p0_review_export.py  test_stage_e4_p0_review_store.py  test_stage_e4_seed_pending_review.py  test_stage_e4_streamlit_workbench_static.py  test_strategy_generator.py  test_system.py
ui/: __init__.py  app.py  enhanced_app.py  enhanced_app_backup.py  state.py  styles.py
utils/: __init__.py  data_utils.py  file_utils.py  ollama_utils.py
vector_db/: __init__.py  chroma_store.py
(+300 files in other folders)
