[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "envision-esg-system"
version = "1.0.0"
description = "ESG披露与沟通智能分析系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alvin", email = "alvin@example.com"}
]
keywords = ["ESG", "AI", "新能源", "合规"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Web框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "python-multipart>=0.0.6",
    # 大模型调用
    "openai>=1.3.0",
    # 向量数据库 & 嵌入模型
    "chromadb>=0.4.0",
    # 文档解析
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    # 文本处理
    "python-Levenshtein>=0.25.0",
    "jinja2>=3.1.0",
    # 数据与配置
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    # 工具库
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "radon>=6.0.0",
    "cloc>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
